--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@testing-library/jest-dom": "^4.2.4",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.9.3",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-color": "^2.18.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-welcome-page": "^0.2.1"
   },
