--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "bootstrap": "^4.4.1",
     "firebase": "^7.9.3",
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.3.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-color": "^2.18.0",
