--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "firebase": "^7.9.3",
     "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.3.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-color": "^2.18.0",
+    "react-date-picker": "^7.10.0",
+    "react-datepicker": "^2.14.0",
+    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-welcome-page": "^0.2.1"
