--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.10.0",
     "firebase": "^7.9.3",
     "firebase-admin": "^8.9.2",
     "moment": "^2.24.0",
@@ -16,6 +22,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-color": "^2.18.0",
     "react-datepicker": "^2.14.0",
+    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
